This project uses Semantic Versioning (see http://semver.org/).

* Version 1.4.1 (2013-02-14) [???????]

Noteworthy bug fixes:
  - Under certain failure modes, especially during RegionServer failures
    or regions split, asynchbase could incorrectly discard an RPC instead
    of retrying it.  This made the client look like it was stuck if the
    RPC was a ROOT or META lookup (#1).
  - Maven releases are now signed with the GPG key of tsunanet@gmail.com


* Version 1.4.0 (2012-11-10) [fae1a04]

New public APIs:
  - Scanners can now scan multiple qualifiers at a time (#35).
  - Scanner and GetRequest now enable you to specify how many versions
    to read from HBase.

Noteworthy changes:
  - Fixed cases where calling `flush()' or `shutdown()' while the
    client is still starting up could cause it to terminate too early
    and to not execute all pending/buffered RPCs (#2).
  - Fixed an RPC serialization bug when batching whole-row deletes.
    See issue #25.
  - The Deferred returned by `flush()' now guarantees that buffered
    atomic increments have also completed (#38).
  - Upgraded to Netty 3.5.9 to avoid an IndexOutOfBoundsException
    when deserializing a KeyValue with an empty qualifier or
    value, under certain circumstances (#40).
  - Fix increment coalescing to prevent overflowing Deferred callback
    chains when too many increments pile up for some counter (#40).
  - Increment coalescing now also supports negative values as well as
    large positive values (previously the limit was 65535).
  - Upgraded to suasync 1.3.1 and Netty 3.5.9.
  - Added a series of integration tests to help ongoing QA.


* Version 1.3.2 (2012-07-10) [2af9f55]

Noteworthy changes:
  - Upgraded to Netty 3.5.2.
  - KeyValue now allows a timestamp of 0.


* Version 1.3.1 (2012-06-16) [7ea151b]

  - Critical bug fix of issue #27 that makes some keys unusable
    given certain region boundaries, in rare circumstances.