@@ -102,7 +102,9 @@ test_LIBADD := \
 	$(LOGBACK_CORE)	\
 	$(JAVASSIST)	\
 	$(JUNIT)	\
+	$(HAMCREST)	\
 	$(MOCKITO)	\
+	$(OBJENESIS)	\
 	$(POWERMOCK_MOCKITO)	\
         $(jar)
 
@@ -221,12 +223,14 @@ pom.xml: pom.xml.in Makefile
 	  echo '<!-- Generated by Makefile on '`date`' -->'; \
 	  sed <$< \
 	    -e 's/@GUAVA_VERSION@/$(GUAVA_VERSION)/' \
+	    -e 's/@HAMCREST_VERSION@/$(HAMCREST_VERSION)/' \
 	    -e 's/@JAVASSIST_VERSION@/$(JAVASSIST_VERSION)/' \
 	    -e 's/@JCL_OVER_SLF4J_VERSION@/$(JCL_OVER_SLF4J_VERSION)/' \
 	    -e 's/@JUNIT_VERSION@/$(JUNIT_VERSION)/' \
 	    -e 's/@LOG4J_OVER_SLF4J_VERSION@/$(LOG4J_OVER_SLF4J_VERSION)/' \
 	    -e 's/@MOCKITO_VERSION@/$(MOCKITO_VERSION)/' \
 	    -e 's/@NETTY_VERSION@/$(NETTY_VERSION)/' \
+	    -e 's/@OBJENESIS_VERSION@/$(OBJENESIS_VERSION)/' \
 	    -e 's/@POWERMOCK_MOCKITO_VERSION@/$(POWERMOCK_MOCKITO_VERSION)/' \
 	    -e 's/@SLF4J_API_VERSION@/$(SLF4J_API_VERSION)/' \
 	    -e 's/@SUASYNC_VERSION@/$(SUASYNC_VERSION)/' \
