@@ -23,8 +23,8 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-MOCKITO_VERSION := 1.9.0
-MOCKITO := third_party/mockito/mockito-$(MOCKITO_VERSION).jar
+MOCKITO_VERSION := 1.9.5
+MOCKITO := third_party/mockito/mockito-core-$(MOCKITO_VERSION).jar
 MOCKITO_BASE_URL := $(ASYNCHBASE_THIRD_PARTY_BASE_URL)
 
 $(MOCKITO): $(MOCKITO).md5
