@@ -23,8 +23,8 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-NETTY_MAJOR_VERSION = 3.5
-NETTY_VERSION := 3.5.9.Final
+NETTY_MAJOR_VERSION = 3.6
+NETTY_VERSION := 3.6.2.Final
 NETTY := third_party/netty/netty-$(NETTY_VERSION).jar
 NETTY_BASE_URL := $(ASYNCHBASE_THIRD_PARTY_BASE_URL)
 
