@@ -23,7 +23,7 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-ZOOKEEPER_VERSION := 3.3.4
+ZOOKEEPER_VERSION := 3.3.6
 ZOOKEEPER := third_party/zookeeper/zookeeper-$(ZOOKEEPER_VERSION).jar
 ZOOKEEPER_BASE_URL := $(ASYNCHBASE_THIRD_PARTY_BASE_URL)
 
